--- a/client/src/style/_variables.scss
+++ b/client/src/style/_variables.scss
@@ -31,13 +31,15 @@ $base-font-size-mobile: 14;
 $mq-breakpoints: (mobile: 320px,
 mobileLg: 375px,
 tablet: 1024px,
-tabletPortrait: 768px,
 desktop: 980px,
 wide: 1300px,
 
 // Tweakpoints
 desktopAd: 810px,
-mobileLandscape: 480px);
+mobileLandscape: 480px,
+tabletPortrait: 768px);
+$mq-show-breakpoints: (mobile, mobileLandscape, tablet, tabletPortrait, desktop, wide);
+
 
 // Mixins 
 @import '../../node_modules/@engagementlab/el-scss/bundle';
